# gst-plugins-imsdk

./: CMakeLists.txt
gst-libs/: CMakeLists.txt
gst-libs/gst/gfx/: CMakeLists.txt
gst-libs/gst/video/: CMakeLists.txt
